RESOLVED FIXED204348
REGRESSION (r252161): box-shadow with inset and rounded borders is clipped
https://bugs.webkit.org/show_bug.cgi?id=204348
Summary REGRESSION (r252161): box-shadow with inset and rounded borders is clipped
Antoine Quint
Reported 2019-11-19 03:33:10 PST
This simple test is now clipped after r252161: <style> div { border-top-left-radius: 50%; border-top-right-radius: 50%; border-bottom-left-radius: 50%; border-bottom-right-radius: 50%; box-shadow: black 0px 0px 0px 2px inset; height: 40px; width: 40px; } </style> <div></div>
Attachments
Reduction (298 bytes, text/html)
2019-11-19 03:51 PST, Antoine Quint
no flags
Patch (4.82 KB, patch)
2019-11-19 16:05 PST, Simon Fraser (smfr)
no flags
Antoine Quint
Comment 1 2019-11-19 03:35:42 PST
Antoine Quint
Comment 2 2019-11-19 03:51:00 PST
Created attachment 383858 [details] Reduction
Simon Fraser (smfr)
Comment 3 2019-11-19 16:05:36 PST
WebKit Commit Bot
Comment 4 2019-11-20 09:12:15 PST
Comment on attachment 383917 [details] Patch Clearing flags on attachment: 383917 Committed r252689: <https://trac.webkit.org/changeset/252689>
WebKit Commit Bot
Comment 5 2019-11-20 09:12:17 PST
All reviewed patches have been landed. Closing bug.
Antoine Quint
Comment 6 2020-05-06 14:36:32 PDT
This improved a regression but didn't quite fix it perfectly, see bug 211530.
Note You need to log in before you can comment on or make changes to this bug.