REGRESSION (r252161): box-shadow with inset and rounded borders is clipped https://bugs.webkit.org/show_bug.cgi?id=204348

Reviewed by Zalan Bujtas.

Source/WebCore:

r252161 introduced a bug for inset shadows where we passed the wrong rect to areaCastingShadowInHole().
Clean the code up a little, and make the xOffset stuff more similar to the outset shadow path.
We could still do a better job of pixel snapping here.

Test: fast/box-shadow/inset-box-shadow.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintBoxShadow):

LayoutTests:

* fast/box-shadow/inset-box-shadow-expected.html: Added.
* fast/box-shadow/inset-box-shadow.html: Added.


Canonical link: https://commits.webkit.org/217673@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@252689 268f45cc-cd09-0410-ab3c-d52691b4dbfc